@@ -34,7 +34,7 @@
         </p>
       </nav>
       <div id='filecontents'>
-        <p>* Performance optimization for animating stacked area charts using a legend.<br/><br/>0.1.8<br/>* Support cmd-click for multi-select in tables on OSX<br/>* Paginated tables revert to the first page when sorted.<br/>* Selectable and searchable tables default to selecting matches.<br/>* Sankey Butterflies avoid focusing redundantly on the same focal node.<br/>* Clean up Table options for searching and pagination.<br/>* Add Table API for searching.<br/>* Add ability to specify an initial column to sort by header text.<br/>* Clean up Table documentation for sorting and searching.<br/>* Sunburst node now places root node inside center circle.<br/>* Plots don't create redundant backgrounds/brushes when rerendered<br/>* Tables and selectable Plots can specify an initial selection when rendering<br/>* Sunburst can select an initial node to render as the root <br/>* Default selectable plots to have a visible unbrush without user styling<br/>* Fix unbrush for selectable plots with margin and non-0 minimum domains.<br/><br/>0.1.7<br/>* Rename NPM module to "chartcollection"<br/>* Release under CC-BY 4.0 license<br/>* Initialize global SVG defs when importing C3 module via require()<br/>* Safe mode for Sankey to ensure nodes are at least as large as their links.<br/>* Allow styling of the focal node for the Butterfly Sankey<br/>* Workaround Chrome bug with SVG gradient masks for Butterfly Sankey<br/>* Sankeys can extend past right edge to avoid overcrowding node columns<br/><br/>0.1.6<br/>* Enable Cake builds for Less<br/>* Expose drag_line_options for straight line layers.<br/>* Fix Sankey regression from CoffeeScript compiler behavior change<br/>* Update swimlanes example to not use CSS style broken on OSX Chrome<br/><br/>0.1.5<br/>* Enable Cake builds for TypeScript<br/>* fix path_options styling for path layers<br/><br/>0.1.4<br/>* Publish to NPM as "q3"<br/><br/>0.1<br/>* Initial Release<br/><br/>################################################################################<br/># Historic C4<br/>################################################################################<br/><br/>0.4.2<br/>* Disable page zooming over plots and capture 'pointer' events.<br/>* Stackable layers tolerate empty data arrays for both layer and stacks.<br/>* Fortify and update TypeScript typings<br/>* Fix legend redraw() with nested bullets<br/>* Fix plot_legend regression for animating stacked layers while zoomed<br/><br/>0.4.1<br/>* Zoom plots center zoom action when axes are present.<br/>* Bar graph automatic bar width based on neighbor proximity instead of linear distribution<br/><br/>0.4<br/>* Add ability for path layers to render circles at data points along path<br/>* Add safety check for duplicate stack keys to stackable layer `safe` mode<br/>* Improve c4.selection options() interface<br/>* Add .parent class to legend items with children<br/><br/>0.3.2<br/>* Document the background svg:rect in plots for styling and event capture<br/>* Fix plot_legend when layer has no data<br/><br/>0.3.1<br/>* Fixes to TypeScript typing definition<br/>* Fix class names applied when minified<br/>* Fix to preserve the i,j parameter semantics for `title` in c4.selection.options when dealing with stacked data.<br/><br/>0.3<br/>* crop_margins now supports 'x' and 'y' values.<br/>* Add `safe` mode to c4.layer.scatter to tolerate positional accessors returning undefined<br/><br/>0.2.2<br/>* Arrange source files to live in same directory as output files.<br/><br/>0.2.1<br/>* Fix bar charts with a single bar and a bar_width specified as a percentage<br/><br/>0.2<br/>* Add `safe` mode to c4.layer.stackable which will tolerate:<br/>** Data not sorted along X axis<br/>** Removing elements where X or Y are not defined<br/>** Pad missing data for stacks<br/>* Plot Legends do not render layer bullet glyphs for layers that are stacked.<br/><br/>0.1.1<br/>* Make stacking of stackable layers tolerant of undefined y values.<br/><br/>0.1<br/>Initial Release<br/></p>
+        <p>* Performance optimization for animating stacked area charts using a legend.<br/>* Fix legend titles based on layer options.<br/><br/>0.1.8<br/>* Support cmd-click for multi-select in tables on OSX<br/>* Paginated tables revert to the first page when sorted.<br/>* Selectable and searchable tables default to selecting matches.<br/>* Sankey Butterflies avoid focusing redundantly on the same focal node.<br/>* Clean up Table options for searching and pagination.<br/>* Add Table API for searching.<br/>* Add ability to specify an initial column to sort by header text.<br/>* Clean up Table documentation for sorting and searching.<br/>* Sunburst node now places root node inside center circle.<br/>* Plots don't create redundant backgrounds/brushes when rerendered<br/>* Tables and selectable Plots can specify an initial selection when rendering<br/>* Sunburst can select an initial node to render as the root <br/>* Default selectable plots to have a visible unbrush without user styling<br/>* Fix unbrush for selectable plots with margin and non-0 minimum domains.<br/><br/>0.1.7<br/>* Rename NPM module to "chartcollection"<br/>* Release under CC-BY 4.0 license<br/>* Initialize global SVG defs when importing C3 module via require()<br/>* Safe mode for Sankey to ensure nodes are at least as large as their links.<br/>* Allow styling of the focal node for the Butterfly Sankey<br/>* Workaround Chrome bug with SVG gradient masks for Butterfly Sankey<br/>* Sankeys can extend past right edge to avoid overcrowding node columns<br/><br/>0.1.6<br/>* Enable Cake builds for Less<br/>* Expose drag_line_options for straight line layers.<br/>* Fix Sankey regression from CoffeeScript compiler behavior change<br/>* Update swimlanes example to not use CSS style broken on OSX Chrome<br/><br/>0.1.5<br/>* Enable Cake builds for TypeScript<br/>* fix path_options styling for path layers<br/><br/>0.1.4<br/>* Publish to NPM as "q3"<br/><br/>0.1<br/>* Initial Release<br/><br/>################################################################################<br/># Historic C4<br/>################################################################################<br/><br/>0.4.2<br/>* Disable page zooming over plots and capture 'pointer' events.<br/>* Stackable layers tolerate empty data arrays for both layer and stacks.<br/>* Fortify and update TypeScript typings<br/>* Fix legend redraw() with nested bullets<br/>* Fix plot_legend regression for animating stacked layers while zoomed<br/><br/>0.4.1<br/>* Zoom plots center zoom action when axes are present.<br/>* Bar graph automatic bar width based on neighbor proximity instead of linear distribution<br/><br/>0.4<br/>* Add ability for path layers to render circles at data points along path<br/>* Add safety check for duplicate stack keys to stackable layer `safe` mode<br/>* Improve c4.selection options() interface<br/>* Add .parent class to legend items with children<br/><br/>0.3.2<br/>* Document the background svg:rect in plots for styling and event capture<br/>* Fix plot_legend when layer has no data<br/><br/>0.3.1<br/>* Fixes to TypeScript typing definition<br/>* Fix class names applied when minified<br/>* Fix to preserve the i,j parameter semantics for `title` in c4.selection.options when dealing with stacked data.<br/><br/>0.3<br/>* crop_margins now supports 'x' and 'y' values.<br/>* Add `safe` mode to c4.layer.scatter to tolerate positional accessors returning undefined<br/><br/>0.2.2<br/>* Arrange source files to live in same directory as output files.<br/><br/>0.2.1<br/>* Fix bar charts with a single bar and a bar_width specified as a percentage<br/><br/>0.2<br/>* Add `safe` mode to c4.layer.stackable which will tolerate:<br/>** Data not sorted along X axis<br/>** Removing elements where X or Y are not defined<br/>** Pad missing data for stacks<br/>* Plot Legends do not render layer bullet glyphs for layers that are stacked.<br/><br/>0.1.1<br/>* Make stacking of stackable layers tolerant of undefined y values.<br/><br/>0.1<br/>Initial Release<br/></p>
       </div>
     </div>
     <div id='footer'>
