@@ -1,4 +1,5 @@
 * Performance optimization for animating stacked area charts using a legend.
+* Fix legend titles based on layer options.
 
 0.1.8
 * Support cmd-click for multi-select in tables on OSX
